Added Amazon Alexa to Experiences

--- a/index.html
+++ b/index.html
@@ -59,10 +59,17 @@
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/Schools.png" alt="" /></div>
+						<div class="image"><img src="images/Schools.png" alt="Schools" /></div>
 						<div class="content">
 							<h3>NHRHS & RIT</h3>
 							<p>I have taken six courses in and related to computer science in both high school and in college, and plan to utilize that knowledge in a future career path. Some include: AP Computer Science, AP Computer Science Principles, Computer Science 141, Computer Science 142, and Discrete Mathmatics for Computing.</p>
+						</div>
+					</section>
+					<section class="spotlight">
+						<div class="image"><img src="images/alexa.png" alt="Amazon Alexa" /></div>
+						<div class="content">
+							<h3>Amazon Alexa Skills</h3>
+							<p>Developed skills for the Amazon Alexa digital assistant over the course of three years; Including Global Trivia, US Trivia, and Compliment Generator.</p>
 						</div>
 					</section>
 					<section class="special">
