--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
 						<form method="post" action="#">
 							<div class="row gtr-uniform">
 								<div class="col-6 col-12-xsmall">
-									<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+									<input type="text" name="Name" id="demo-name" value="" placeholder="Name" />
 								</div>
 								<div class="col-6 col-12-xsmall">
-									<input type="text" name="_replyto" id="demo-email" value="" placeholder="Email" />
+									<input type="text" name="Email" id="demo-email" value="" placeholder="Email" />
 								</div>
 								
 								<div class="col-12">
-									<textarea name="message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+									<textarea name="Message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
 								</div>
 								<div class="col-12">
 									<ul class="actions">
