Added hyperlinks to experiences & updated text

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Sometimes located in Ho-Ho-Kus, NJ<br />
+					<h2>Occasionally located in Ho-Ho-Kus, NJ<br />
 					but most of the time in Rochester, NY</h2>
 				</header>
 				<ul class="icons major">
-					<li><span class="icon solid fa-code"><span class="label">Shoot</span></span></li>
+					<li><span class="icon solid fa-compass"><span class="label">Shoot</span></span></li>
 
 				</ul>
 			</section>
@@ -45,28 +45,28 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/bcaIV.png" alt="bcaIV" /></div>
+						<div class="image"><a href="https://hackbca4.devpost.com/" target="_blank"> <img src="images/bcaIV.png" alt="bcaIV" /></a></div>
 						<div class="content">
 							<h3>Hack BCA IV</h3>
 							<p>Participated in an introductory hackathon at Bergen County Academies in 2017, which kickstarted a strong passion in computer science.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/BrickHack6.png" alt="Brick Hack 6" /></div>
+						<div class="image"><a href="https://brickhack.io/" target="_blank"><img src="images/BrickHack6.png" alt="Brick Hack 6" /></a></div>
 						<div class="content">
 							<h3>Brick Hack 6</h3>
 							<p>This was my second hackathon three years later which allowed me to showcase and compare my learning over a long period of time.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/Schools.png" alt="Schools" /></div>
+						<div class="image"><a href="https://www.rit.edu/" target="_blank"><img src="images/Schools.png" alt="Schools" /></a></div>
 						<div class="content">
 							<h3>NHRHS & RIT</h3>
 							<p>I have taken six courses in and related to computer science in both high school and in college, and plan to utilize that knowledge in a future career path. Some include: AP Computer Science, AP Computer Science Principles, Computer Science 141, Computer Science 142, and Discrete Mathmatics for Computing.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/alexa.png" alt="Amazon Alexa" /></div>
+						<div class="image"><a href="https://www.amazon.com/alexa-skills/b?ie=UTF8&node=13727921011" target="_blank"><img src="images/alexa.png" alt="Amazon Alexa" /></a></div>
 						<div class="content">
 							<h3>Amazon Alexa Skills</h3>
 							<p>Developed skills for the Amazon Alexa digital assistant over the course of three years; Including Global Trivia, US Trivia, and Compliment Generator.</p>
@@ -87,8 +87,9 @@
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
 					<h2>Who is Matthew?</h2>
-					<p>Matthew Glanz is a hard worker and a dedicated student.<br />
-					He always strives to gain new knowledge and perspectives on the world as a whole.</p>
+					<p>Matthew Glanz is a hard worker, dedicated student, and a loyal friend.<br />
+					He always strives to share his knowledge through a passion<br /> 
+					for both the physical and the digital aspects of technology.</p>
 				</header>
 			</section>
 
@@ -104,7 +105,7 @@
 					method="POST"
 				  >
 					<section>
-						<h4>Contact Me</h4>
+						<h4>Contact Me:</h4>
 						<form method="post" action="#">
 							<div class="row gtr-uniform">
 								<div class="col-6 col-12-xsmall">
