--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
 					<h2>Who is Matthew?</h2>
-					<p>Matthew Glanz is a hard worker, dedicated student, and a loyal friend.<br />
+					<p>Matthew Glanz is a hard worker, dedicated student, and loyal friend.<br />
 					He always strives to share his knowledge through a passion<br /> 
 					for both the physical and the digital aspects of technology.</p>
 				</header>
