--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
 					
 					<ul class="actions">
 						
-						<li><a href="#one" class="button icon solid">Return Home</a></li>
+						<li><a href="https://matthewglanz.com/" class="button icon solid">Return Home</a></li>
 					</ul>
 				</div>
 			
