--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="Error">
-					<h1><a href="#">Error 404: Page not found</a></h1>
+					<h1>Error 404: Page not found</h1>
 					
 					<ul class="actions">
 						
