--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<div class="image"><a href="https://www.rit.edu/" target="_blank"><img src="images/Schools.png" alt="Schools" /></a></div>
 						<div class="content">
 							<h3>NHRHS & RIT</h3>
-							<p>I have taken six courses in and related to computer science in both high school and in college, and plan to utilize that knowledge in a future career path. Some include: AP Computer Science, AP Computer Science Principles, Computer Science 141, Computer Science 142, and Discrete Mathmatics for Computing.</p>
+							<p>I have taken many courses in and related to computer science in both high school and in college, and plan to utilize that knowledge in a future career path. Some include: AP Computer Science, AP Computer Science Principles, Computer Science 141, Computer Science 142, and Discrete Mathmatics for Computing.</p>
 						</div>
 					</section>
 					<section class="spotlight">
