--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Matthew Glanz</a></h1>
-					<p>A University Student at RIT<br />
+					<p>A Second Year Student at RIT<br />
 					Studying Computer Science</p>
 					<ul class="actions">
 						<li><a href="resume.pdf" target="_blank" class="button primary icon solid fa-download" >Resume</a></li>
@@ -32,8 +32,8 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Occasionally located in Ho-Ho-Kus, NJ<br />
-					but most of the time in Rochester, NY</h2>
+					<h2>Seeking a summer Co-Op in either the Northern NJ area<br />
+					or Rochester, NY</h2>
 				</header>
 				<ul class="icons major">
 					<li><span class="icon solid fa-compass"><span class="label">Shoot</span></span></li>
@@ -62,7 +62,7 @@
 						<div class="image"><a href="https://www.rit.edu/" target="_blank"><img src="images/Schools.png" alt="Schools" /></a></div>
 						<div class="content">
 							<h3>NHRHS & RIT</h3>
-							<p>I have taken many courses in and related to computer science in both high school and in college, and plan to utilize that knowledge in a future career path. Some include: AP Computer Science, AP Computer Science Principles, Computer Science 141, Computer Science 142, and Discrete Mathmatics for Computing.</p>
+							<p>I have taken many courses in and related to computer science in both high school and in college, and plan to utilize that knowledge in a future career path. Some include: AP Computer Science, AP Computer Science Principles, Computer Science 141, Computer Science 142, Discrete Mathmatics for Computing, CS Theory, and Mechanics of Programming.</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -86,9 +86,9 @@
 		<!-- Three -->
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
-					<h2>Who is Matthew?</h2>
-					<p>Matthew Glanz is a hard worker, dedicated student, and loyal friend.<br />
-					He always strives to share his knowledge through a passion<br /> 
+					<h2>Who am I?</h2>
+					<p>I am a hard worker, dedicated student, and loyal friend.<br />
+					I strive to share my knowledge through a passion<br /> 
 					for both the physical and the digital aspects of technology.</p>
 				</header>
 			</section>
