--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Seeking a summer Co-Op in either the Northern NJ area<br />
-					or Rochester, NY</h2>
+					<h2>Seeking a summer 2021 co-op opportunity<br />
+						in either the Northern NJ area or Rochester, NY</h2>
 				</header>
 				<ul class="icons major">
 					<li><span class="icon solid fa-compass"><span class="label">Shoot</span></span></li>
