--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Seeking a summer 2021 co-op opportunity<br />
+					<h2>Seeking a Summer 2021 co-op opportunity<br />
 						in either the Northern NJ area or Rochester, NY</h2>
 				</header>
 				<ul class="icons major">
