--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
 					<h2>Seeking a Summer 2021 co-op opportunity<br />
-						in either the Northern NJ area or Rochester, NY</h2>
+						in either Rochester NY or the Northern NJ/NYC area</h2>
 				</header>
 				<ul class="icons major">
 					<li><span class="icon solid fa-compass"><span class="label">Shoot</span></span></li>
