--- a/index.html
+++ b/index.html
@@ -38,12 +38,20 @@
 				<ul class="icons major">
 					<li><span class="icon solid fa-compass"><span class="label">Shoot</span></span></li>
 
-				</ul>
+			œ	</ul>
 			</section>
 
 		<!-- Two -->
 			<section id="two" class="wrapper">
 				<div class="inner alt">
+					<section class="spotlight">
+						<div class="image"><img src="images/wrench.png" alt="Wrench"/></div>
+						<div class="content">
+							<h3>Local IT Consultant</h3>
+							<p>Assists with IT issues in the local area including but not limited to
+								hardware repair, home network setup, virus removal, and many other client-specific issues for small businesses and individuals.</p>
+						</div>
+					</section>
 					<section class="spotlight">
 						<div class="image"><a href="https://hackbca4.devpost.com/" target="_blank"> <img src="images/bcaIV.png" alt="bcaIV" /></a></div>
 						<div class="content">
@@ -62,7 +70,7 @@
 						<div class="image"><a href="https://www.rit.edu/" target="_blank"><img src="images/Schools.png" alt="Schools" /></a></div>
 						<div class="content">
 							<h3>NHRHS & RIT</h3>
-							<p>I have taken many courses in and related to computer science in both high school and in college, and plan to utilize that knowledge in a future career path. Some include: AP Computer Science, AP Computer Science Principles, Computer Science 141, Computer Science 142, Discrete Mathmatics for Computing, CS Theory, and Mechanics of Programming.</p>
+							<p>I have taken many courses in and related to computer science in both high school and in college, and plan to utilize that knowledge in a future career path. Some include: AP Computer Science, AP Computer Science Principles, Computer Science 141, Computer Science 142, Discrete Mathmatics for Computing and Mechanics of Programming.</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -75,9 +83,9 @@
 					<section class="special">
 						<ul class="icons labeled">
 
-							<li><span class="icon solid fa-cloud"><span class="label">HTML, CSS & Javascript</span></span></li>
-							<li><span class="icon solid fa-code"><span class="label">Java & Python</span></span></li>
-							<li><span class="icon solid fa-desktop"><span class="label">Linux, Windows, & Mac</span></span></li>
+							<li><span class="icon solid fa-cloud"><span class="label">HTML, CSS, Javascript</span></span></li>
+							<li><span class="icon solid fa-code"><span class="label">Java, Python, C</span></span></li>
+							<li><span class="icon solid fa-desktop"><span class="label">Linux, Windows, Mac</span></span></li>
 						</ul>
 					</section>
 				</div>
